# upaint

./: .gitignore  .gitmodules  .nvim-dap.lua  Cargo.toml  DEVELOPING.md  LICENSE  README.md  input.txt  watch_log_file.py
.github/workflows/: ci.yaml
keystrokes_parsing/: 2024-10-27.md  2024-11-01.md  Cargo.toml  README.md
keystrokes_parsing/keystrokes_parsing_derive/: Cargo.toml
keystrokes_parsing/keystrokes_parsing_derive/src/: from_keystrokes.rs  get_keymap.rs  impl_from_keystrokes_by_preset_keymap.rs  lib.rs  presetable.rs  utils.rs
keystrokes_parsing/src/: from_str.rs  keymap.rs  keystroke.rs  lib.rs  preset_sources.rs  preset_struct_field.rs
keystrokes_parsing/src/keymap/: deserialize.rs
keystrokes_parsing/src/keystroke/: deserialize.rs  serialize.rs
src/: actions.rs  adopt_new_keystroke_system.rs  brush.rs  canvas.rs  color_picker.rs  command_line.rs  config.rs  file_formats.rs  input_mode.rs  keystrokes.rs  lib.rs  line_drawing.rs  macros.rs  main.rs  motions.rs  operators.rs  rendering.rs  selections.rs  status_bar.rs  test_colors.rs  test_config.rs  test_export.rs  test_import.rs  test_unicode_width.rs  user_input.rs  yank_slots.rs
src/actions/: brush.rs  change_focus.rs  cursor.rs  interactive.rs  misc.rs  mode.rs  mouse.rs  pan.rs  session.rs
src/canvas/: history.rs  raw.rs  rect.rs  test.rs
src/canvas/raw/: action.rs  ansi_export.rs  ansi_import.rs  cell_map.rs  continuous_region.rs  iter.rs  operations.rs  paste.rs  rendering.rs  test.rs  transform.rs  yank.rs
src/canvas/raw/ansi_export/: test.rs
src/canvas/raw/ansi_import/: test.rs
src/canvas/raw/cell_map/: array.rs  btree_map.rs  hash_map.rs
src/canvas/raw/continuous_region/: test.rs
src/canvas/raw/iter/: test.rs  tracer.rs
src/color_picker/: target.rs
src/color_theme_presets/: base.toml
src/config/: brush_keys.rs  color_theme.rs  config_file_value.rs  default_config.toml  direction_keys.rs  input_mode.rs  keybindings.rs  keymaps.rs  keys.rs  mouse_actions.rs  option_untagged.rs  sources.rs  test.rs
src/config/base/: standard.toml  vim.toml
src/config/color_theme/: base.toml  canvas.rs  deserialize.rs
src/config/color_theme/presets/: base.toml  campbell.toml  classic.toml  light.toml  monokai.toml  ubuntu.toml  vga.toml  xterm.toml
src/config/input_mode/: base_iter.rs  keymaps.rs
src/config/keybindings/: deserialize.rs  parse.rs  sequence.rs  sequence2.rs  sequence3.rs  serialize.rs
src/config/keymaps/: base_keymaps_iter.rs
src/config/keys/: deserialize.rs
src/keystrokes/: actions.rs  deserialize.rs  motions.rs  operators.rs
src/testing/: test_adopt_new_keystroke_system.rs  test_cell_maps.rs  test_config.rs  test_crossterm.rs  test_export.rs  test_import.rs  test_macros.rs
src/user_input/: insert_mode.rs  visual_rect.rs
tests/: keystroke_inputs.rs
upaint_derive/: Cargo.toml
upaint_derive/src/: lib.rs
