[package]
name = "upaint"
version = "0.2.0"
edition = "2021"
default-run = "upaint"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.23.0", features = ["all-widgets", "serde"] }
anyhow = "1.0.75"
crossterm = { version = "0.27.0", features = ["serde"] }
clap = { version= "4.4.2", features = ["derive"] }
# config = "0.13.3"
config = { git = "https://github.com/sigurdo/config-rs.git" }
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.0"
ratatui-textarea = "0.3.2"
hsv = "0.1.1"
prisma = "0.1.1"
angular-units = "0.2.4"
unicode-width = "0.1.11"
dirs = "5.0.1"
log = "0.4.20"
nalgebra = "0.32.5"
lending-iterator = "0.1.7"
bitflags = "2.5.0"


[[bin]]
name = "upaint"
path = "src/main.rs"

[[bin]]
name = "test_export"
path = "src/testing/test_export.rs"

[[bin]]
name = "test_import"
path = "src/testing/test_import.rs"

[[bin]]
name = "test_config"
path = "src/testing/test_config.rs"

[[bin]]
name = "test_colors"
path = "src/testing/test_colors.rs"

[[bin]]
name = "test_unicode_width"
path = "src/testing/test_unicode_width.rs"

[[bin]]
name = "test_crossterm"
path = "src/testing/test_crossterm.rs"

[[bin]]
name = "test_macros"
path = "src/testing/test_macros.rs"
