[package]
name = "upaint"
version = "0.2.0"
edition = "2021"
default-run = "upaint"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets", "serde", "unstable-rendered-line-info"] }
tui-textarea = "0.7.0"
crossterm = { version = "0.28.1", features = ["serde"] }
clap = { version= "4.4.2", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
toml = { git = "https://github.com/sigurdo/toml-rs.git" }
hsv = "0.1.1"
prisma = "0.1.1"
angular-units = "0.2.4"
unicode-width = "0.1.11"
dirs = "5.0.1"
log = "0.4.20"
nalgebra = "0.32.5"
bitflags = "2.5.0"
enum_dispatch = "0.3.13"
derive_more = { version = "1.0.0", features = ["full"] }
keystrokes_parsing = { path = "keystrokes_parsing" }
nestify = "0.3.3"
notify = { version = "6.1.1", features = ["serde"] }
anyhow = "1.0.95"
thiserror = "2"

[[bin]]
name = "upaint"
path = "src/main.rs"

[[bin]]
name = "test_export"
path = "src/testing/test_export.rs"

[[bin]]
name = "test_import"
path = "src/testing/test_import.rs"

[[bin]]
name = "test_config"
path = "src/testing/test_config.rs"

[[bin]]
name = "test_colors"
path = "src/testing/test_colors.rs"

[[bin]]
name = "test_unicode_width"
path = "src/testing/test_unicode_width.rs"

[[bin]]
name = "test_crossterm"
path = "src/testing/test_crossterm.rs"

[[bin]]
name = "test_macros"
path = "src/testing/test_macros.rs"

# [[bin]]
# name = "test_adopt_new_keystroke_system"
# path = "src/testing/test_adopt_new_keystroke_system.rs"

[[bin]]
name = "test_cell_maps"
path = "src/testing/test_cell_maps.rs"
